--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple online tilemap editor.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Daniel Cardenas",
   "license": "ISC",
